--- a/StartFinishApp/StartFinishApp/Main.storyboard
+++ b/StartFinishApp/StartFinishApp/Main.storyboard
@@ -169,7 +169,7 @@
         <!--Item 1-->
         <scene sceneID="Of1-Fx-14Q">
             <objects>
-                <viewController id="p0c-Bx-q9T" sceneMemberID="viewController">
+                <viewController id="p0c-Bx-q9T" customClass="GeneralInformationController" customModule="StartFinishApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7HA-l7-mDd"/>
                         <viewControllerLayoutGuide type="bottom" id="1zU-R4-7Mp"/>
@@ -177,13 +177,72 @@
                     <view key="view" contentMode="scaleToFill" id="C6M-hz-fX2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Start Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPe-Bl-Nne">
+                                <rect key="frame" x="134" y="88" width="107" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6G-A5-okc">
+                                <rect key="frame" x="64" y="140" width="246" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Finish Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLB-19-smd">
+                                <rect key="frame" x="64" y="191" width="246" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zvo-FZ-k72">
+                                <rect key="frame" x="58" y="239" width="258" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Result" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ALC-He-pB1">
+                                <rect key="frame" x="86" y="287" width="201" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WJA-ur-poR">
+                                <rect key="frame" x="80" y="339" width="214" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JLB-19-smd" firstAttribute="top" secondItem="h6G-A5-okc" secondAttribute="bottom" constant="20" id="BH3-KF-xNf"/>
+                            <constraint firstItem="h6G-A5-okc" firstAttribute="centerX" secondItem="C6M-hz-fX2" secondAttribute="centerX" id="JcN-BP-FPb"/>
+                            <constraint firstItem="ALC-He-pB1" firstAttribute="top" secondItem="zvo-FZ-k72" secondAttribute="bottom" constant="20" id="SGM-d3-01w"/>
+                            <constraint firstItem="JLB-19-smd" firstAttribute="centerX" secondItem="C6M-hz-fX2" secondAttribute="centerX" id="ULZ-d2-7li"/>
+                            <constraint firstItem="MPe-Bl-Nne" firstAttribute="top" secondItem="7HA-l7-mDd" secondAttribute="bottom" constant="20" id="a85-zu-5K9"/>
+                            <constraint firstItem="WJA-ur-poR" firstAttribute="top" secondItem="ALC-He-pB1" secondAttribute="bottom" constant="20" id="cHc-Sn-KV6"/>
+                            <constraint firstItem="h6G-A5-okc" firstAttribute="top" secondItem="MPe-Bl-Nne" secondAttribute="bottom" constant="20" id="hf6-Zb-Zv5"/>
+                            <constraint firstItem="zvo-FZ-k72" firstAttribute="top" secondItem="JLB-19-smd" secondAttribute="bottom" constant="20" id="i26-v6-lp7"/>
+                            <constraint firstItem="zvo-FZ-k72" firstAttribute="centerX" secondItem="C6M-hz-fX2" secondAttribute="centerX" id="kF8-ih-QQU"/>
+                            <constraint firstItem="MPe-Bl-Nne" firstAttribute="centerX" secondItem="C6M-hz-fX2" secondAttribute="centerX" id="mFC-Pi-a0U"/>
+                            <constraint firstItem="ALC-He-pB1" firstAttribute="centerX" secondItem="C6M-hz-fX2" secondAttribute="centerX" id="pL5-2u-IyF"/>
+                            <constraint firstItem="WJA-ur-poR" firstAttribute="centerX" secondItem="C6M-hz-fX2" secondAttribute="centerX" id="tX4-j3-nlM"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="PXS-gU-FkZ"/>
+                    <connections>
+                        <outlet property="FinishTimeData" destination="zvo-FZ-k72" id="1j1-VG-Xtk"/>
+                        <outlet property="FinishTimeLabel" destination="JLB-19-smd" id="Wcf-CQ-6Yt"/>
+                        <outlet property="ResultTimeData" destination="WJA-ur-poR" id="zng-4x-I7x"/>
+                        <outlet property="StartTimeData" destination="h6G-A5-okc" id="Rp6-To-wJd"/>
+                        <outlet property="StartTimeLabel" destination="MPe-Bl-Nne" id="DOv-ac-kr0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ezh-Rb-947" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3225" y="67"/>
+            <point key="canvasLocation" x="3224.8000000000002" y="66.11694152923539"/>
         </scene>
         <!--Manage Device Controller-->
         <scene sceneID="xx4-db-kGI">
